<resources>
    <string name="app_name">Pickup</string>
    <string name="title_activity_maps">Map</string>

    <string name="cancel">Cancel</string>

    <string name="action_settings">Settings</string>

    <string name="event_name_text">Event Name</string>
    <string name="event_creator_text">Creator</string>
    <string name="event_sport_text">Sport</string>
    <string name="event_location_text">Location</string>
    <string name="event_time_text">Time</string>
    <string name="event_date_text">Date</string>
    <string name="etxt_fromdate">Dat</string>
    <string name="event_gender_text">Gender</string>
    <string name="event_age_group_text">Age Group</string>
    <string name="event_max_num_ppl_text">Max # Ppl</string>
    <string name="event_min_user_rating_text">Min User Rating</string>

    <string name="create_event_btn_txt">Create Event</string>
    <string name="edit_event_btn_txt">Edit Event</string>
    <string name="delete_event_btn_txt">Delete Event</string>
    <string name="save_changes_event_btn_txt">Save Changes</string>

    <string-array name="gender_array">
        <item>Any</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string-array name="sport_array">
        <item>Badminton</item>
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Handball</item>
        <item>Ice Hockey</item>
        <item>Football</item>
        <item>Other</item>
        <item>Racquetball</item>
        <item>Roller Hockey</item>
        <item>Softball</item>
        <item>Soccer</item>
        <item>Tennis</item>
        <item>Volleyball</item>
    </string-array>


    <string name="hello">CustomSpinner Demo from CoderzHeaven!</string>
    <string name="prompt">  Select your Favourite  </string>
    <drawable name="white">#ffffff</drawable>
    <drawable name="black">#000000</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#a020f0</drawable>
    <drawable name="grey">#778899</drawable>
    <drawable name="red">#C11B17</drawable>
    <drawable name="yellow">#FFFF8C</drawable>
    <drawable name="PowderBlue">#b0e0e6</drawable>
    <drawable name="brown">#2F1700</drawable>
    <drawable name="Hotpink">#7D2252</drawable>
    <string name="select_Category">Select Category</string>
    <drawable name="darkgrey">#606060</drawable>
</resources>
