<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editLinearLayout1"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/editTableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/editTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_name_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/edit_event_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" >
                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/editTableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/editTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_creator_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/edit_event_creator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" >
                    <requestFocus />
                </EditText>
            </TableRow>
            <TableRow
                android:id="@+id/editTableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/editTextView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_sport_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/edit_sport_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:id="@+id/editTableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/editTextView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_location_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/edit_event_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" >
                    <requestFocus />
                </EditText>
            </TableRow>
            <TableRow
                android:id="@+id/editTableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/editTextView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_date_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/edit_event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_date_text" />
            </TableRow>
            <TableRow
                android:id="@+id/editTableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/editTextView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_time_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/edit_event_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_time_text" />
            </TableRow>
            <TableRow
                android:id="@+id/editTableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/editTextView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_gender_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/edit_gender_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:id="@+id/editTableRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/editTextView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_age_group_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/EditGridLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="1"
                    android:orientation="horizontal" >

                    <Spinner
                        android:id="@+id/edit_age_min_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Spinner
                        android:id="@+id/edit_age_max_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </GridLayout>

            </TableRow>
            <TableRow
                android:id="@+id/editTableRow9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/editTextView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_max_num_ppl_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/edit_max_num_ppl_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>
            <TableRow
                android:id="@+id/editTableRow10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/editTextView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_min_user_rating_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/edit_min_user_rating_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/edit_save_changes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_changes_event_btn_txt"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/edit_event_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>